--- a/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
+++ b/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
@@ -175,7 +175,7 @@
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="MDT-C3-hmh" secondAttribute="height" multiplier="1:1" id="sGK-X8-zoE"/>
                                         </constraints>
-                                        <state key="normal" image="AddPhotoBtn"/>
+                                        <state key="normal" image="AddPhotoCircle"/>
                                         <connections>
                                             <action selector="addPhotoBtnPressed:" destination="48r-iv-jYN" eventType="touchUpInside" id="ZKu-Ou-2aA"/>
                                         </connections>
@@ -900,6 +900,31 @@
             </objects>
             <point key="canvasLocation" x="2708" y="-1512.5937031484259"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="oPF-e0-aAp">
+            <objects>
+                <viewController id="PAU-IK-vpg" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eae-73-KJN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Update or select new games you are currently playing and the console and roles you play for that game" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2q2-X0-8np">
+                                <rect key="frame" x="67" y="82" width="240" height="111"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="ComicSansMS" family="Comic Sans MS" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="hoR-hD-mNo"/>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C4W-Jq-8a6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3848.8000000000002" y="-1513.4932533733136"/>
+        </scene>
         <!--Chat-->
         <scene sceneID="C1h-aj-YYo">
             <objects>
@@ -1086,7 +1111,7 @@
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="IYG-8u-spl" secondAttribute="height" multiplier="1:1" id="Uvf-3O-rEI"/>
                                         </constraints>
-                                        <state key="normal" title="Button" image="AddPhotoBtn"/>
+                                        <state key="normal" title="Button" image="AddPhotoCircle"/>
                                     </button>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Please provide this group a name and an optional picture for the group." textAlignment="natural" adjustsFontForContentSizeCategory="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hjl-7s-cnr" userLabel="Instructions">
                                         <rect key="frame" x="110" y="122" width="249" height="81"/>
@@ -1943,7 +1968,7 @@
     </scenes>
     <resources>
         <image name="AddGamerBtn" width="220" height="40"/>
-        <image name="AddPhotoBtn" width="110" height="100"/>
+        <image name="AddPhotoCircle" width="110" height="100"/>
         <image name="Back Arrow" width="30" height="30"/>
         <image name="Forgot your password" width="154" height="15"/>
         <image name="Logo" width="210" height="134"/>
